fine layout + prova carosel - inserire animazioni

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -2,4 +2,6 @@ $green: #1fad95;
 $cinder: #171520;
 $white: #ffffff;
 $black: #22272d;
-$lightgray: #e2e2e0;
+$lightgray: #efefef;
+$purple: #40046b;
+$goldrose: #ECC5AB;
