cambio colore + modifiche varie

--- a/src/assets/styles/partials/_variables.scss
+++ b/src/assets/styles/partials/_variables.scss
@@ -1,7 +1,9 @@
-$green: #1fad95;
+$green: #ef6f31; 
 $cinder: #171520;
 $white: #ffffff;
 $black: #22272d;
 $lightgray: #efefef;
 $purple: #40046b;
 $goldrose: #ECC5AB;
+
+// #1fad95
